sync script working for x5

--- a/Pipfile
+++ b/Pipfile
@@ -10,12 +10,12 @@ name = "pypi"
 click = "*"
 asyncpg = "*"
 attrdict = "*"
-PyYAML = "*"
+pyyaml = "*"
 tqdm = "*"
 pytaglib = "*"
 google-api-python-client = "*"
 isodate = "*"
-Sanic = "*"
+sanic = "*"
 pymongo = "*"
 watchdog = "*"
 
