--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,29 @@
+aiofiles==0.3.2
+argh==0.26.2
 asyncpg==0.13.0
 attrdict==2.0.0
 click==6.7
 google-api-python-client==1.6.4
 httplib2==0.10.3
+httptools==0.0.9
+humanfriendly==4.4.1
 isodate==0.6.0
+Jinja2==2.10
+MarkupSafe==1.0
 oauth2client==4.1.2
+pathtools==0.1.2
 pyasn1==0.3.7
 pyasn1-modules==0.1.5
 pytaglib==1.4.1
 PyYAML==3.12
 rsa==3.4.2
-singleton-decorator==1.0.0
+sanic==0.6.0
+Sanic-WTF==0.5.0
 six==1.11.0
 tqdm==4.19.4
+ujson==1.35
 uritemplate==3.0.0
 uvloop==0.8.1
+watchdog==0.8.3
+websockets==4.0.1
+WTForms==2.1
