--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 aiocache==0.8.0
 aiofiles==0.3.2
+alabaster==0.7.10
 argh==0.26.2
 asyncpg==0.13.0
 asynctest==0.11.1
 attrdict==2.0.0
+Babel==2.5.1
+certifi==2017.11.5
+chardet==3.0.4
 click==6.7
+docutils==0.14
 google-api-python-client==1.6.4
 httplib2==0.10.3
 httptools==0.0.9
 humanfriendly==4.4.1
+idna==2.6
+imagesize==0.7.1
 isodate==0.6.0
 Jinja2==2.10
 MarkupSafe==1.0
@@ -16,16 +23,23 @@ oauth2client==4.1.2
 pathtools==0.1.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
+Pygments==2.2.0
 pytaglib==1.4.1
+pytz==2017.3
 PyYAML==3.12
+requests==2.18.4
 rsa==3.4.2
 sanic==0.6.0
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
 six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.6.5
+sphinxcontrib-websupport==1.0.1
 tqdm==4.19.4
 ujson==1.35
 uritemplate==3.0.0
+urllib3==1.22
 uvloop==0.8.1
 watchdog==0.8.3
 websockets==4.0.1
