--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ asyncpg==0.13.0
 asynctest==0.11.1
 attrdict==2.0.0
 Babel==2.5.1
+bson==0.5.0
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
@@ -19,17 +20,20 @@ imagesize==0.7.1
 isodate==0.6.0
 Jinja2==2.10
 MarkupSafe==1.0
+motor==1.1
 oauth2client==4.1.2
 pathtools==0.1.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 Pygments==2.2.0
+pymongo==3.5.1
 pytaglib==1.4.1
 pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
 rsa==3.4.2
 sanic==0.6.0
+sanic-mongo==1.7.1
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
 six==1.11.0
@@ -37,9 +41,11 @@ snowballstemmer==1.2.1
 Sphinx==1.6.5
 sphinxcontrib-websupport==1.0.1
 tqdm==4.19.4
+ua-parser==0.7.3
 ujson==1.35
 uritemplate==3.0.0
 urllib3==1.22
+user-agents==1.1.0
 uvloop==0.8.1
 watchdog==0.8.3
 websockets==4.0.1
