--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ asyncpg==0.13.0
 asynctest==0.11.1
 attrdict==2.0.0
 Babel==2.5.1
-bson==0.5.0
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
+click-man==0.2.1
+click-repl==0.1.2
 docutils==0.14
 google-api-python-client==1.6.4
 gunicorn==19.7.1
@@ -20,20 +21,21 @@ idna==2.6
 imagesize==0.7.1
 isodate==0.6.0
 Jinja2==2.10
+logging-tree==1.7
 MarkupSafe==1.0
 motor==1.1
 oauth2client==4.1.2
 pathtools==0.1.2
+prompt-toolkit==1.0.15
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 Pygments==2.2.0
-pymongo==3.5.1
 pytaglib==1.4.1
 pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
 rsa==3.4.2
-sanic==0.6.0
+sanic==0.7.0
 sanic-mongo==1.7.1
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
@@ -47,7 +49,8 @@ ujson==1.35
 uritemplate==3.0.0
 urllib3==1.22
 user-agents==1.1.0
-uvloop==0.8.1
+uvloop==0.9.1
 watchdog==0.8.3
+wcwidth==0.1.7
 websockets==4.0.1
 WTForms==2.1
