--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
 aiocache==0.8.0
 aiofiles==0.3.2
+aioprocessing==1.0.0
+aioredis==1.0.0
 alabaster==0.7.10
 argh==0.26.2
+async-timeout==2.0.0
 asyncpg==0.13.0
 asynctest==0.11.1
 attrdict==2.0.0
 Babel==2.5.1
+beautifulsoup4==4.6.0
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
 click-man==0.2.1
 click-repl==0.1.2
 docutils==0.14
+google==1.9.3
 google-api-python-client==1.6.4
 gunicorn==19.7.1
+hiredis==0.2.0
 httplib2==0.10.3
-httptools==0.0.9
+httptools==0.0.10
 humanfriendly==4.4.1
 idna==2.6
 imagesize==0.7.1
@@ -24,7 +30,7 @@ Jinja2==2.10
 limits==1.2.1
 logging-tree==1.7
 MarkupSafe==1.0
-motor==1.1
+motor==1.2.0
 oauth2client==4.1.2
 pathtools==0.1.2
 prompt-toolkit==1.0.15
