--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiocache==0.8.0
 aiofiles==0.3.2
 aiohttp==2.3.7
+aiomcache==0.6.0
+aionotify==0.2.0
 aioprocessing==1.0.0
 aioredis==1.0.0
 alabaster==0.7.10
@@ -20,6 +22,7 @@ docutils==0.14
 google==1.9.3
 google-api-python-client==1.6.4
 gunicorn==19.7.1
+hachiko==0.1
 hiredis==0.2.0
 httplib2==0.10.3
 httptools==0.0.10
