--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aionotify==0.2.0
 aioprocessing==1.0.0
 aioredis==1.0.0
 alabaster==0.7.10
+APScheduler==3.5.0
 argh==0.26.2
 async-timeout==2.0.0
 asyncpg==0.13.0
@@ -53,11 +54,13 @@ sanic-limiter==0.1.2
 sanic-mongo==1.7.1
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
+schedule==0.5.0
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.6.5
 sphinxcontrib-websupport==1.0.1
 tqdm==4.19.5
+tzlocal==1.5.1
 ua-parser==0.7.3
 ujson==1.35
 uritemplate==3.0.0
