--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,46 @@
 aiocache==0.8.0
 aiofiles==0.3.2
-aiohttp==2.3.7
+aiohttp==2.3.9
 aiomcache==0.6.0
 aionotify==0.2.0
 aioprocessing==1.0.0
 aioredis==1.0.0
 alabaster==0.7.10
-APScheduler==3.5.0
+APScheduler==3.5.1
 argh==0.26.2
 async-timeout==2.0.0
 asyncpg==0.14.0
 asynctest==0.11.1
 attrdict==2.0.0
-Babel==2.5.1
+Babel==2.5.3
 beautifulsoup4==4.6.0
-certifi==2017.11.5
+certifi==2018.1.18
 chardet==3.0.4
 click==6.7
 click-man==0.2.2
-click-repl==0.1.2
+click-repl==0.1.3
 click-spinner==0.1.7
+codecov==2.0.15
+coverage==4.4.2
+Cython==0.27.3
 docutils==0.14
-google==1.9.3
-google-api-python-client==1.6.4
+google==2.0.1
+google-api-python-client==1.6.5
 gunicorn==19.7.1
 hachiko==0.1
 hiredis==0.2.0
 httplib2==0.10.3
 httptools==0.0.10
-humanfriendly==4.4.1
+humanfriendly==4.8
 idna==2.6
 imagesize==0.7.1
 isodate==0.6.0
 Jinja2==2.10
-limits==1.2.1
+limits==1.3
 logging-tree==1.7
 MarkupSafe==1.0
-motor==1.2.0
-multidict==3.3.2
+motor==1.2.1
+multidict==4.1.0
 oauth2client==4.1.2
 pathtools==0.1.2
 prompt-toolkit==1.0.15
@@ -58,7 +61,7 @@ Sanic-WTF==0.5.0
 schedule==0.5.0
 six==1.11.0
 snowballstemmer==1.2.1
-Sphinx==1.6.5
+Sphinx==1.6.6
 sphinxcontrib-websupport==1.0.1
 tqdm==4.19.5
 tzlocal==1.5.1
@@ -72,4 +75,4 @@ watchdog==0.8.3
 wcwidth==0.1.7
 websockets==4.0.1
 WTForms==2.1
-yarl==0.17.0
+yarl==1.1.0
