--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 aiocache==0.8.0
 aiofiles==0.3.2
-aiohttp==2.3.9
+aiohttp==3.1.1
 aiomcache==0.6.0
 aionotify==0.2.0
-aioprocessing==1.0.0
-aioredis==1.0.0
+aioredis==1.1.0
 alabaster==0.7.10
 APScheduler==3.5.1
 argh==0.26.2
-async-timeout==2.0.0
-asyncpg==0.14.0
-asynctest==0.11.1
+async-timeout==2.0.1
+asyncio==3.4.3
+asyncpg==0.15.0
+asynctest==0.12.0
 attrdict==2.0.0
 attrs==17.4.0
 Babel==2.5.3
@@ -22,62 +22,49 @@ click-man==0.2.2
 click-repl==0.1.3
 click-spinner==0.1.7
 codecov==2.0.15
-coverage==4.4.2
-Cython==0.27.3
+coverage==4.5.1
+Cython==0.28.1
 docutils==0.14
 google==2.0.1
 google-api-python-client==1.6.5
 gunicorn==19.7.1
 hachiko==0.1
 hiredis==0.2.0
-httplib2==0.10.3
+httplib2==0.11.1
 httptools==0.0.10
 humanfriendly==4.8
 idna==2.6
-imagesize==0.7.1
+idna-ssl==1.0.1
 isodate==0.6.0
 Jinja2==2.10
-limits==1.3
-logging-tree==1.7
 MarkupSafe==1.0
-motor==1.2.1
+more-itertools==4.1.0
 multidict==4.1.0
 oauth2client==4.1.2
 pathtools==0.1.2
 pluggy==0.6.0
 prompt-toolkit==1.0.15
-py==1.5.2
+py==1.5.3
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-Pygments==2.2.0
-pymongo==3.6.0
-pytaglib==1.4.1
-pytest==3.4.0
-pytest-sanic==0.1.6
-pytz==2017.3
+pytaglib==1.4.3
+pytest==3.5.0
+pytz==2018.3
 PyYAML==3.12
 requests==2.18.4
 rsa==3.4.2
 sanic==0.7.0
-sanic-limiter==0.1.2
-sanic-mongo==1.7.1
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
-schedule==0.5.0
 six==1.11.0
-snowballstemmer==1.2.1
-Sphinx==1.6.6
-sphinxcontrib-websupport==1.0.1
-tqdm==4.19.5
+tqdm==4.19.9
 tzlocal==1.5.1
-ua-parser==0.7.3
 ujson==1.35
 uritemplate==3.0.0
 urllib3==1.22
-user-agents==1.1.0
 uvloop==0.9.1
 watchdog==0.8.3
 wcwidth==0.1.7
 websockets==4.0.1
 WTForms==2.1
-yarl==1.1.0
+yarl==1.1.1
