--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiocache==0.8.0
 aiofiles==0.3.2
-aiohttp==3.1.1
+aiohttp==3.1.2
 aiomcache==0.6.0
 aionotify==0.2.0
 aioredis==1.1.0
@@ -26,13 +26,13 @@ coverage==4.5.1
 Cython==0.28.1
 docutils==0.14
 google==2.0.1
-google-api-python-client==1.6.5
+google-api-python-client==1.6.6
 gunicorn==19.7.1
 hachiko==0.1
 hiredis==0.2.0
-httplib2==0.11.1
-httptools==0.0.10
-humanfriendly==4.8
+httplib2==0.11.3
+httptools==0.0.11
+humanfriendly==4.10
 idna==2.6
 idna-ssl==1.0.1
 isodate==0.6.0
@@ -50,6 +50,7 @@ pyasn1-modules==0.2.1
 pytaglib==1.4.3
 pytest==3.5.0
 pytz==2018.3
+pywatchman==1.4.1
 PyYAML==3.12
 requests==2.18.4
 rsa==3.4.2
@@ -57,7 +58,7 @@ sanic==0.7.0
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
 six==1.11.0
-tqdm==4.19.9
+tqdm==4.20.0
 tzlocal==1.5.1
 ujson==1.35
 uritemplate==3.0.0
