--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -41,4 +41,34 @@ http {
         proxy_redirect http://$host:$proxy_port https://$host;
     }
   }
+
+  server {
+    listen 192.168.0.2:80;
+    server_name dev.musicbot.ovh;
+    location /static {
+        alias /home/ubuntu/musicbot/lib/web/templates/static/;
+    }
+  
+    location /sendfile {
+        internal;
+        alias /home/ubuntu/music;
+        try_files $uri$is_args$args $uri;
+        add_header X-debug "$http_content_disposition";
+    }
+  
+    location / {
+        proxy_http_version 1.1;
+        proxy_set_header X-Sendfile-Type X-Accel-Redirect;
+        proxy_set_header X-Accel-Mapping /home/ubuntu/music/=/sendfile/;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host:1337;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_max_temp_file_size 0;
+        proxy_pass http://192.168.0.2:1337;
+        proxy_redirect http://$host:$proxy_port https://$host;
+    }
+  }
 }
