--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,8 @@ oauth2client==4.1.2
 pathtools==0.1.2
 pluggy==0.6.0
 prompt-toolkit==1.0.15
+psycopg2==2.7.4
+psycopg2-binary==2.7.4
 py==1.5.3
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
