loop and title supported

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,82 @@
-aiocache==0.8.0
+aiocache==0.10.0
 aiofiles==0.3.2
-aiohttp==3.1.2
+aiohttp==3.3.2
 aiomcache==0.6.0
 aionotify==0.2.0
 aioredis==1.1.0
-alabaster==0.7.10
+alabaster==0.7.11
 APScheduler==3.5.1
 argh==0.26.2
-async-timeout==2.0.1
+async-timeout==3.0.0
 asyncio==3.4.3
-asyncpg==0.15.0
-asynctest==0.12.0
+asyncpg==0.17.0
+asynctest==0.12.2
+atomicwrites==1.1.5
 attrdict==2.0.0
-attrs==17.4.0
-Babel==2.5.3
-beautifulsoup4==4.6.0
-certifi==2018.1.18
+attrs==18.1.0
+Babel==2.6.0
+beautifulsoup4==4.6.1
+cachetools==2.1.0
+certifi==2018.4.16
 chardet==3.0.4
 click==6.7
+click-completion==0.3.1
+click-didyoumean==0.0.3
 click-man==0.2.2
-click-repl==0.1.3
-click-spinner==0.1.7
+click-repl==0.1.4
+click-spinner==0.1.8
 codecov==2.0.15
+coloredlogs==10.0
 coverage==4.5.1
-Cython==0.28.1
+Cython==0.28.4
 docutils==0.14
 google==2.0.1
-google-api-python-client==1.6.6
-gunicorn==19.7.1
+google-api-python-client==1.7.4
+google-auth==1.5.1
+google-auth-httplib2==0.0.3
+gunicorn==19.9.0
 hachiko==0.1
 hiredis==0.2.0
 httplib2==0.11.3
 httptools==0.0.11
-humanfriendly==4.10
-idna==2.6
-idna-ssl==1.0.1
+humanfriendly==4.16.1
+idna==2.7
+idna-ssl==1.1.0
 isodate==0.6.0
 Jinja2==2.10
 MarkupSafe==1.0
-more-itertools==4.1.0
-multidict==4.1.0
+more-itertools==4.3.0
+msgpack==0.5.6
+multidict==4.3.1
 oauth2client==4.1.2
 pathtools==0.1.2
-pluggy==0.6.0
-prompt-toolkit==1.0.15
-psycopg2==2.7.4
-psycopg2-binary==2.7.4
-py==1.5.3
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
+pluggy==0.7.1
+prompt-toolkit==2.0.4
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+pur==5.0.0
+py==1.5.4
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pytaglib==1.4.3
-pytest==3.5.0
-pytz==2018.3
+pytest==3.7.0
+pytz==2018.5
 pywatchman==1.4.1
-PyYAML==3.12
-requests==2.18.4
+PyYAML==3.13
+requests==2.19.1
 rsa==3.4.2
 sanic==0.7.0
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
 six==1.11.0
-tqdm==4.20.0
+tqdm==4.24.0
 tzlocal==1.5.1
 ujson==1.35
 uritemplate==3.0.0
-urllib3==1.22
-uvloop==0.9.1
+urllib3==1.23
+uvloop==0.11.0
 watchdog==0.8.3
 wcwidth==0.1.7
-websockets==4.0.1
-WTForms==2.1
-yarl==1.1.1
+websockets==6.0
+WTForms==2.2.1
+yarl==1.2.6
