--- a/.landscape.yml
+++ b/.landscape.yml
@@ -1,4 +1,12 @@
 python-targets:
-      - 3
+  - 3
 max-line-length: 120
 strictness: medium
+pep8:
+  disable:
+    - E501
+pylint:
+  disable:
+    - line-too-long
+    - too-many-arguments
+    - unused-argument
