--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+adduserpath==0.4.0
 aiocache==0.10.0
 aiofiles==0.4.0
 aiohttp==3.4.4
@@ -5,6 +6,7 @@ aiomcache==0.6.0
 aionotify==0.2.0
 aioredis==1.1.0
 alabaster==0.7.11
+appdirs==1.4.3
 APScheduler==3.5.3
 argh==0.26.2
 astroid==2.0.4
@@ -17,9 +19,12 @@ attrdict==2.0.0
 attrs==18.2.0
 Babel==2.6.0
 beautifulsoup4==4.6.3
+CacheControl==0.12.5
 cachetools==2.1.0
+cachy==0.2.0
 certifi==2018.8.24
 chardet==3.0.4
+cleo==0.6.8
 click==6.7
 click-completion==0.4.1
 click-didyoumean==0.0.3
@@ -27,6 +32,7 @@ click-man==0.2.2
 click-repl==0.1.5
 click-spinner==0.1.8
 codecov==2.0.15
+colorama==0.3.9
 coloredlogs==10.0
 coverage==4.5.1
 Cython==0.28.5
@@ -40,7 +46,9 @@ google-auth==1.5.1
 google-auth-httplib2==0.0.3
 gunicorn==19.9.0
 hachiko==0.1
+hatch==0.20.0
 hiredis==0.2.0
+html5lib==1.0.1
 httplib2==0.11.3
 httptools==0.0.11
 humanfriendly==4.16.1
@@ -49,8 +57,10 @@ idna-ssl==1.1.0
 isodate==0.6.0
 isort==4.3.4
 Jinja2==2.10
+jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 limits==1.3
+lockfile==0.12.2
 logging-tree==1.8
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -58,13 +68,18 @@ more-itertools==4.3.0
 msgpack==0.5.6
 multidict==4.4.0
 oauth2client==4.1.3
+pastel==0.1.0
 pathtools==0.1.2
 pep8-naming==0.7.0
+pexpect==4.6.0
+pkginfo==1.4.2
 pluggy==0.7.1
+poetry==0.11.5
 prompt-toolkit==2.0.4
 prospector==1.1.2
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+ptyprocess==0.6.0
 pur==5.0.0
 py==1.6.0
 pyasn1==0.4.4
@@ -73,33 +88,44 @@ pycodestyle==2.4.0
 pydocstyle==2.1.1
 pydub==0.22.1
 pyflakes==2.0.0
+pylev==1.3.0
 pylint==2.1.1
 pylint-plugin-utils==0.4
+pyparsing==2.2.0
+pyrsistent==0.14.4
 pytaglib==1.4.3
 pytest==3.8.0
 pytz==2018.5
 pywatchman==1.4.1
 PyYAML==3.13
 requests==2.19.1
+requests-toolbelt==0.8.0
 requirements-detector==0.6
 rsa==3.4.2
 sanic==0.8.1
 sanic-limiter==0.1.3
 sanic-openapi==0.4.0
 Sanic-WTF==0.5.0
+semver==2.8.1
 setoptconf==0.2.0
 shellingham==1.2.4
 six==1.11.0
 snowballstemmer==1.2.1
+structlog==18.2.0
+toml==0.9.6
+tomlkit==0.4.4
 tqdm==4.25.0
+twine==1.11.0
 typed-ast==1.1.0
 tzlocal==1.5.1
 ujson==1.35
 uritemplate==3.0.0
 urllib3==1.23
 uvloop==0.11.2
+virtualenv==16.0.0
 watchdog==0.9.0
 wcwidth==0.1.7
+webencodings==0.5.1
 websockets==6.0
 wrapt==1.10.11
 WTForms==2.2.1
