--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ alabaster==0.7.11
 appdirs==1.4.3
 APScheduler==3.5.3
 argh==0.26.2
+asn1crypto==0.24.0
 astroid==2.0.4
+async-generator==1.10
 async-timeout==3.0.0
 asyncio==3.4.3
 asyncpg==0.17.0
@@ -23,6 +25,7 @@ CacheControl==0.12.5
 cachetools==2.1.0
 cachy==0.2.0
 certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
 cleo==0.6.8
 click==6.7
@@ -31,13 +34,20 @@ click-didyoumean==0.0.3
 click-man==0.2.2
 click-repl==0.1.5
 click-spinner==0.1.8
+cliff==2.13.0
+cmd2==0.9.4
 codecov==2.0.15
 colorama==0.3.9
 coloredlogs==10.0
 coverage==4.5.1
+cryptography==2.3.1
 Cython==0.28.5
+debtcollector==1.20.0
+decorator==4.3.0
+deprecation==2.0.5
 docutils==0.14
 dodgy==0.1.9
+dogpile.cache==0.6.7
 flake8==3.5.0
 flake8-polyfill==1.0.2
 google==2.0.1
@@ -54,27 +64,46 @@ httptools==0.0.11
 humanfriendly==4.16.1
 idna==2.7
 idna-ssl==1.1.0
+iso8601==0.1.12
 isodate==0.6.0
 isort==4.3.4
 Jinja2==2.10
+jmespath==0.9.3
+jsonpatch==1.23
+jsonpointer==2.0
 jsonschema==2.6.0
+keystoneauth1==3.11.0
 lazy-object-proxy==1.3.1
 limits==1.3
 lockfile==0.12.2
 logging-tree==1.8
 MarkupSafe==1.0
 mccabe==0.6.1
+monotonic==1.5
 more-itertools==4.3.0
 msgpack==0.5.6
 multidict==4.4.2
+munch==2.3.2
+netaddr==0.7.19
+netifaces==0.10.7
 oauth2client==4.1.3
+openstacksdk==0.17.2
+os-service-types==1.3.0
+osc-lib==1.11.1
+oslo.config==6.4.0
+oslo.i18n==3.21.0
+oslo.serialization==2.27.0
+oslo.utils==3.37.0
+packaging==17.1
 pastel==0.1.0
 pathtools==0.1.2
+pbr==4.2.0
 pep8-naming==0.7.0
 pexpect==4.6.0
 pkginfo==1.4.2
 pluggy==0.7.1
 poetry==0.11.5
+prettytable==0.7.2
 prompt-toolkit==2.0.4
 prospector==1.1.2
 psycopg2==2.7.5
@@ -84,23 +113,34 @@ pur==5.0.0
 py==1.6.0
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
-pycodestyle==2.4.0
+pycodestyle==2.3.1
+pycparser==2.19
 pydocstyle==2.1.1
 pydub==0.23.0
-pyflakes==2.0.0
+pyflakes==1.6.0
 pylev==1.3.0
 pylint==2.1.1
 pylint-plugin-utils==0.4
+pyOpenSSL==18.0.0
 pyparsing==2.2.1
+pyperclip==1.6.4
 pyrsistent==0.14.4
 pytaglib==1.4.3
 pytest==3.8.1
+pytest-sanic==0.1.13
+python-cinderclient==4.0.1
+python-glanceclient==2.12.1
+python-keystoneclient==3.17.0
+python-novaclient==11.0.0
+python-openstackclient==3.16.1
 pytz==2018.5
 pywatchman==1.4.1
 PyYAML==3.13
 requests==2.19.1
 requests-toolbelt==0.8.0
+requestsexceptions==1.4.0
 requirements-detector==0.6
+rfc3986==1.1.0
 rsa==4.0
 sanic==0.8.3
 sanic-limiter==0.1.3
@@ -109,8 +149,10 @@ Sanic-WTF==0.5.0
 semver==2.8.1
 setoptconf==0.2.0
 shellingham==1.2.6
+simplejson==3.16.0
 six==1.11.0
 snowballstemmer==1.2.1
+stevedore==1.29.0
 structlog==18.2.0
 toml==0.9.6
 tomlkit==0.4.4
@@ -123,10 +165,11 @@ uritemplate==3.0.0
 urllib3==1.23
 uvloop==0.11.2
 virtualenv==16.0.0
+warlock==1.3.0
 watchdog==0.9.0
 wcwidth==0.1.7
 webencodings==0.5.1
-websockets==6.0
+websockets==5.0.1
 wrapt==1.10.11
 WTForms==2.2.1
 yarl==1.2.6
