--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -16,20 +16,20 @@ http {
     listen 80;
     server_name musicbot.ovh;
     location /static {
-        alias /home/ubuntu/musicbot/lib/web/templates/static/;
+        alias /home/crunch/musicbot/musicbot/lib/web/templates/static/;
     }
-  
+
     location /sendfile {
         internal;
-        alias /home/ubuntu/music;
+        alias /home/crunch/music;
         try_files $uri$is_args$args $uri;
         add_header X-debug "$http_content_disposition";
     }
-  
+
     location / {
         proxy_http_version 1.1;
         proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-        proxy_set_header X-Accel-Mapping /home/ubuntu/music/=/sendfile/;
+        proxy_set_header X-Accel-Mapping /home/crunch/music/=/sendfile/;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
@@ -46,20 +46,20 @@ http {
     listen 192.168.0.2:80;
     server_name dev.musicbot.ovh;
     location /static {
-        alias /home/ubuntu/musicbot/lib/web/templates/static/;
+        alias /home/crunch/musicbot/musicbot/lib/web/templates/static/;
     }
-  
+
     location /sendfile {
         internal;
-        alias /home/ubuntu/music;
+        alias /home/crunch/music;
         try_files $uri$is_args$args $uri;
         add_header X-debug "$http_content_disposition";
     }
-  
+
     location / {
         proxy_http_version 1.1;
         proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-        proxy_set_header X-Accel-Mapping /home/ubuntu/music/=/sendfile/;
+        proxy_set_header X-Accel-Mapping /home/crunch/music/=/sendfile/;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
