--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ coverage-badge = "^0.2.0"
 pytest-cov = "^2.6"
 pgcli = "^2.0"
 pytest-click = "^0.1.0"
+pylint = "^2.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
