--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 apipkg==1.5
 argh==0.26.2
+astroid==2.1.0
 atomicwrites==1.2.1
 attrdict==2.0.0
 attrs==18.2.0
@@ -22,9 +23,12 @@ humanfriendly==4.17
 humanize==0.5.1
 idna==2.8
 isodate==0.6.0
+isort==4.3.4
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 logging-tree==1.8
 MarkupSafe==1.1.0
+mccabe==0.6.1
 more-itertools==4.3.0
 pathtools==0.1.2
 pgcli==2.0.1
@@ -36,8 +40,10 @@ psycopg2-binary==2.7.6.1
 py==1.7.0
 pydub==0.23.0
 Pygments==2.3.1
+pylint==2.2.2
 pytaglib==1.4.4
 pytest==3.10.1
+pytest-click==0.1
 pytest-cov==2.6.0
 pytest-forked==0.2
 pytest-xdist==1.25.0
@@ -54,3 +60,4 @@ tqdm==4.28.1
 urllib3==1.24.1
 watchdog==0.9.0
 wcwidth==0.1.7
+wrapt==1.10.11
