--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ dist: xenial
 language: python
 python:
   - "3.7.1"
-install: pip install --user -r requirements.txt
+install: pip install -r requirements.txt
