--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,4 +1,5 @@
 worker_processes  1;
+user crunch;
 pid /run/nginx.pid;
 
 events {
@@ -15,60 +16,71 @@ http {
   server {
     listen 80;
     server_name musicbot.ovh;
-    location /static {
-        alias /home/crunch/musicbot/musicbot/lib/web/templates/static/;
-    }
-
-    location /sendfile {
-        internal;
-        alias /home/crunch/music;
-        try_files $uri$is_args$args $uri;
-        add_header X-debug "$http_content_disposition";
-    }
-
     location / {
-        proxy_http_version 1.1;
-        proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-        proxy_set_header X-Accel-Mapping /home/crunch/music/=/sendfile/;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header Host $http_host:1338;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_max_temp_file_size 0;
-        proxy_pass http://127.0.0.1:1338;
-        proxy_redirect http://$host:$proxy_port https://$host;
+        alias /home/crunch/musicbot/web/;
     }
+
+    location /music {
+	    auth_basic "MusicBot Area";
+		auth_basic_user_file /home/crunch/musicbot/scripts/.htpasswd;
+        alias /home/crunch/music/;
+		autoindex on;
+    }
+
+    #location /static {
+    #    alias /home/crunch/musicbot/musicbot/lib/web/templates/static/;
+    #}
+
+    #location /sendfile {
+    #    internal;
+    #    alias /home/crunch/music;
+    #    try_files $uri$is_args$args $uri;
+    #    add_header X-debug "$http_content_disposition";
+    #}
+
+    #location / {
+    #    proxy_http_version 1.1;
+    #    proxy_set_header X-Sendfile-Type X-Accel-Redirect;
+    #    proxy_set_header X-Accel-Mapping /home/crunch/music/=/sendfile/;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
+    #    proxy_set_header X-Forwarded-Proto https;
+    #    proxy_set_header Host $http_host:1338;
+    #    proxy_set_header Upgrade $http_upgrade;
+    #    proxy_set_header Connection "Upgrade";
+    #    proxy_max_temp_file_size 0;
+    #    proxy_pass http://127.0.0.1:1338;
+    #    proxy_redirect http://$host:$proxy_port https://$host;
+    #}
   }
 
-  server {
-    listen 192.168.0.2:80;
-    server_name dev.musicbot.ovh;
-    location /static {
-        alias /home/crunch/musicbot/musicbot/lib/web/templates/static/;
-    }
+  #server {
+  #  listen 192.168.0.2:80;
+  #  server_name dev.musicbot.ovh;
+  #  location /static {
+  #      alias /home/crunch/musicbot/musicbot/lib/web/templates/static/;
+  #  }
 
-    location /sendfile {
-        internal;
-        alias /home/crunch/music;
-        try_files $uri$is_args$args $uri;
-        add_header X-debug "$http_content_disposition";
-    }
+  #  location /sendfile {
+  #      internal;
+  #      alias /home/crunch/music;
+  #      try_files $uri$is_args$args $uri;
+  #      add_header X-debug "$http_content_disposition";
+  #  }
 
-    location / {
-        proxy_http_version 1.1;
-        proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-        proxy_set_header X-Accel-Mapping /home/crunch/music/=/sendfile/;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header Host $http_host:1337;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_max_temp_file_size 0;
-        proxy_pass http://192.168.0.2:1337;
-        proxy_redirect http://$host:$proxy_port https://$host;
-    }
-  }
+  #  location / {
+  #      proxy_http_version 1.1;
+  #      proxy_set_header X-Sendfile-Type X-Accel-Redirect;
+  #      proxy_set_header X-Accel-Mapping /home/crunch/music/=/sendfile/;
+  #      proxy_set_header X-Real-IP $remote_addr;
+  #      proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
+  #      proxy_set_header X-Forwarded-Proto https;
+  #      proxy_set_header Host $http_host:1337;
+  #      proxy_set_header Upgrade $http_upgrade;
+  #      proxy_set_header Connection "Upgrade";
+  #      proxy_max_temp_file_size 0;
+  #      proxy_pass http://192.168.0.2:1337;
+  #      proxy_redirect http://$host:$proxy_port https://$host;
+  #  }
+  #}
 }
