--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ pydub = "^0.23.0"
 spotipy = "^2.4"
 psycopg2-binary = "^2.7"
 isort = {version = "^4.3",extras = ["pyproject"]}
+pyacoustid = "^1.1"
+pytube = "^9.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.10"
