--- a/vue-musicbot/package.json
+++ b/vue-musicbot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-musicbot",
+  "name": "vue-musicbotx",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,44 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.27",
     "axios": "^0.18.0",
     "graphql": "^14.1.1",
-    "vue": "^2.5.22",
-    "vue-apollo": "^3.0.0-beta.28",
-    "vuex": "^3.1.0"
+    "graphql-tag": "^2.10.1",
+    "splitpanes": "^1.13.0",
+    "vue": "^2.6.6",
+    "vue-axios": "^2.1.4",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
+    "@vue/cli-plugin-babel": "^3.5.0",
+    "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-service": "^3.5.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
