--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,36 +10,37 @@ musicbot = 'musicbot.cli:main'
 
 [tool.poetry.dependencies]
 python = "^3.7"
+isort = {version = "^4.3",extras = ["pyproject"]}
 click = "^7.0"
-click-completion = "^0.5.0"
+click-completion = "^0.5.1"
 click-didyoumean = "^0.0.3"
-attrdict = "^2.0.1"
-attrs = "^19.1.0"
 click-repl = "^0.1.6"
-click-man = "^0.2.2"
+click-man = "^0.3.0"
+click-spinner = "^0.1.8"
+attrdict = "^2.0"
+attrs = "^19.1"
 pytaglib = "^1.4"
 watchdog = "^0.9.0"
-humanfriendly = "^4.17"
-click-spinner = "^0.1.8"
-tqdm = "^4.28"
+humanfriendly = "^4.18"
+tqdm = "^4.31"
 isodate = "^0.6.0"
 coloredlogs = "^10.0"
 logging-tree = "^1.8"
-pydub = "^0.23.0"
+pydub = "^0.23.1"
 spotipy = "^2.4"
-psycopg2-binary = "^2.7"
-isort = {version = "^4.3",extras = ["pyproject"]}
+psycopg2-binary = "^2.8"
 pyacoustid = "^1.1"
 pytube = "^9.4"
+pyyaml = "^5.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.10"
-pytest-xdist = "^1.25"
+pytest = "^4.4"
+pytest-xdist = "^1.28"
 pytest-cov = "^2.6"
 pytest-click = "^0.3.0"
-coverage-badge = "^0.2.0"
-pgcli = "^2.0"
-pylint = "^2.2"
+coverage-badge = "^1.0"
+pgcli = "^2.1"
+pylint = "^2.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
