--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes  1;
-user crunch;
-pid /run/nginx.pid;
+error_log /Users/apensart/projects/musicbot/logs/error.log;
+pid /Users/apensart/projects/musicbot/nginx.pid;
 
 events {
   worker_connections  1024;
@@ -14,18 +14,20 @@ http {
   #gzip  on;
 
   server {
-    listen 80;
+    listen 8000;
     server_name musicbot.ovh;
+    access_log /Users/apensart/projects/musicbot/logs/access.log;
     location / {
-        alias /home/crunch/musicbot/web/;
-    }
-
-    location /music {
-	    auth_basic "MusicBot Area";
-		auth_basic_user_file /home/crunch/musicbot/scripts/.htpasswd;
-        alias /home/crunch/music/;
+        alias /Volumes/book/music/;
 		autoindex on;
     }
+
+    #location /music {
+	#    auth_basic "MusicBot Area";
+	#	 auth_basic_user_file /Users/apensart/projects/musicbot/scripts/.htpasswd;
+    #    alias /Volumes/book/music/;
+	#	 autoindex on;
+    #}
 
     #location /static {
     #    alias /home/crunch/musicbot/musicbot/lib/web/templates/static/;
