--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,40 @@
-apipkg==1.5
 argh==0.26.2
-astroid==2.2.5
-atomicwrites==1.3.0
 attrdict==2.0.1
 attrs==19.1.0
 audioread==2.1.6
 certifi==2019.3.9
 chardet==3.0.4
-cli-helpers==1.2.0
-Click==7.0
+click==7.0
 click-completion==0.5.1
 click-didyoumean==0.0.3
 click-man==0.3.0
 click-repl==0.1.6
 click-spinner==0.1.8
+colorama==0.4.1
 coloredlogs==10.0
-configobj==5.0.6
-coverage==4.5.3
-coverage-badge==1.0.1
-execnet==1.6.0
 humanfriendly==4.18
-humanize==0.5.1
 idna==2.8
 isodate==0.6.0
-isort==4.3.16
-Jinja2==2.10.1
-lazy-object-proxy==1.3.1
+isort==4.3.17
+jinja2==2.10.1
 logging-tree==1.8
-MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==7.0.0
+markupsafe==1.1.1
 pathtools==0.1.2
-pgcli==2.1.0
-pgspecial==1.11.5
-pluggy==0.9.0
 prompt-toolkit==2.0.9
-psycopg2==2.7.7
-psycopg2-binary==2.8.1
-py==1.8.0
+psycopg2-binary==2.8.2
 pyacoustid==1.1.5
 pydub==0.23.1
-Pygments==2.3.1
-pylint==2.3.1
+pyreadline==2.1
 pytaglib==1.4.5
-pytest==4.4.0
-pytest-click==0.3
-pytest-cov==2.6.1
-pytest-forked==1.0.2
-pytest-xdist==1.28.0
+python-vlc==3.0.6109
 pytube==9.4.0
-PyYAML==5.1
+pyyaml==5.1
 requests==2.21.0
-setproctitle==1.1.10
-shellingham==1.3.0
+shellingham==1.3.1
 six==1.12.0
 spotipy==2.4.4
-sqlparse==0.2.4
-tabulate==0.8.3
-terminaltables==3.1.0
 toml==0.10.0
 tqdm==4.31.1
-typed-ast==1.3.1
-urllib3==1.24.1
+urllib3==1.24.2
 watchdog==0.9.0
 wcwidth==0.1.7
-wrapt==1.11.1
