--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,7 @@ musicbot = 'musicbot.cli:main'
 python = "^3.7"
 isort = {version = "^4.3",extras = ["pyproject"]}
 click = "^7.0"
-click-completion = "^0.5.1"
 click-didyoumean = "^0.0.3"
-click-repl = "^0.1.6"
 click-man = "^0.3.0"
 click-spinner = "^0.1.8"
 attrdict = "^2.0"
@@ -34,6 +32,7 @@ pytube = "^9.4"
 pyyaml = "^5.1"
 python-vlc = "^3.0"
 prompt_toolkit = "^2.0"
+graphql-py = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.4"
