--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,37 @@
 argh==0.26.2
 attrdict==2.0.1
-attrs==19.1.0
-audioread==2.1.6
-certifi==2019.3.9
+attrs==19.3.0
+audioread==2.1.8
+certifi==2019.9.11
 chardet==3.0.4
 click==7.0
-click-completion==0.5.1
 click-didyoumean==0.0.3
 click-man==0.3.0
-click-repl==0.1.6
 click-spinner==0.1.8
-colorama==0.4.1
+colorama==0.4.1; sys_platform == "win32"
 coloredlogs==10.0
+graphql-py==0.7.1
 humanfriendly==4.18
 idna==2.8
 isodate==0.6.0
-isort==4.3.17
-jinja2==2.10.1
+isort==4.3.21
 logging-tree==1.8
-markupsafe==1.1.1
 pathtools==0.1.2
-prompt-toolkit==2.0.9
-psycopg2-binary==2.8.2
-pyacoustid==1.1.5
+ply==3.11
+prompt-toolkit==2.0.10
+psycopg2-binary==2.8.4
+pyacoustid==1.1.7
 pydub==0.23.1
-pyreadline==2.1
+pyreadline==2.1; sys_platform == "win32"
 pytaglib==1.4.5
-python-vlc==3.0.6109
-pytube==9.4.0
-pyyaml==5.1
-requests==2.21.0
-shellingham==1.3.1
+python-vlc==3.0.7110
+pytube==9.5.2
+pyyaml==5.1.2
+requests==2.22.0
 six==1.12.0
 spotipy==2.4.4
-toml==0.10.0
-tqdm==4.31.1
-urllib3==1.24.2
+toml==0.10.0; extra == "pyproject"
+tqdm==4.36.1
+urllib3==1.25.6
 watchdog==0.9.0
 wcwidth==0.1.7
