--- a/vue-musicbot/package.json
+++ b/vue-musicbot/package.json
@@ -13,6 +13,8 @@
     "graphiql": "^0.13.0",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "postgraphile": "^4.4.4",
+    "postgraphile-plugin-connection-filter": "^1.1.3",
     "splitpanes": "^1.13.0",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
