--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ audioread==2.1.8
 certifi==2019.9.11
 chardet==3.0.4
 click==7.0
+click-aliases==1.0.1
 click-didyoumean==0.0.3
 click-man==0.3.0
 click-spinner==0.1.8
@@ -32,6 +33,6 @@ six==1.13.0
 spotipy==2.4.4
 toml==0.10.0
 tqdm==4.38.0
-urllib3==1.25.6
+urllib3==1.25.7
 watchdog==0.9.0
 wcwidth==0.1.7
