--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 musicbot = 'musicbot.cli:main'
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 isort = {version = "^4.3",extras = ["pyproject"]}
 click = "^7.0"
 click-didyoumean = "^0.0.3"
@@ -34,6 +34,8 @@ python-vlc = "^3.0"
 prompt_toolkit = "^2.0"
 graphql-py = "^0.7.1"
 click_aliases = "^1.0.1"
+pgcli = "^2.1.1"
+backtrace = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.4"
@@ -41,9 +43,8 @@ pytest-xdist = "^1.28"
 pytest-cov = "^2.6"
 pytest-click = "^0.3.0"
 coverage-badge = "^1.0"
-pgcli = "^2.1"
 pylint = "^2.3"
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+[tool.dephell.main]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "setuppy", path = "setup.py"}
