--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
 backports.csv==1.0.7
+backtrace==0.2.1
 certifi==2019.9.11
 chardet==3.0.4
 cli-helpers==1.2.1
@@ -11,9 +12,10 @@ click-aliases==1.0.1
 click-didyoumean==0.0.3
 click-man==0.3.0
 click-spinner==0.1.8
-colorama==0.4.1; sys_platform == "win32"
+colorama==0.3.7
 coloredlogs==10.0
 configobj==5.0.6
+feedparser==5.2.1
 graphql-py==0.7.1
 humanfriendly==4.18
 humanize==0.5.1
@@ -41,7 +43,7 @@ setproctitle==1.1.10
 six==1.13.0
 spotipy==2.4.4
 sqlparse==0.3.0
-tabulate==0.8.5
+tabulate==0.8.6
 terminaltables==3.1.0
 toml==0.10.0
 tqdm==4.38.0
