fixed github actions

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,2 @@
 [pytest]
-#addopts = --cov-report term-missing --durations=0 --cov musicbot -x -n auto tests
-addopts = --cov-report term-missing --durations=0 --cov musicbot -x tests
+addopts = --cov-report term-missing --durations=0 --cov musicbot tests
