--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
-        sudo apt-get install -y libtag1-dev postgresql-server-dev-all ffmpeg avcon
+        sudo apt-get install -y libtag1-dev postgresql-server-dev-all ffmpeg
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Lint with pylint
