--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,6 @@ isodate = "^0.6.0"
 coloredlogs = "^10.0"
 logging-tree = "^1.8"
 pydub = "^0.23.1"
-spotipy = "^2.4"
 psycopg2-binary = "^2.8"
 pyacoustid = "^1.1"
 pytube = "^9.4"
@@ -34,6 +33,7 @@ graphql-py = "^0.7.1"
 click_aliases = "^1.0.1"
 feedparser = "^5.2.1"
 pgcli = "^2.1.1"
+spotify = "^0.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.4"
