--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pgcli = "^2.1.1"
 spotify = {git = "https://github.com/mental32/spotify.py"}
 python-dotenv = "^0.10.3"
 flask = "^1.1.1"
+prettytable = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.4"
