--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         sudo apt-get install -y libtag1-dev postgresql-server-dev-all ffmpeg
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python3 setup.py install
     - name: Lint with pylint
       run: |
         pylint musicbot tests
