--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,6 +1,6 @@
 FROM debian:sid
 
-RUN apt-get update && apt-get upgrade -y && apt-get install -y vlc libtag1-dev postgresql-server-dev-all ffmpeg python3-pip
+RUN apt-get update && apt-get upgrade -y && apt-get install -y pgcli vlc libtag1-dev postgresql-server-dev-all ffmpeg python3-pip
 
 WORKDIR /musicbot
 ADD setup.py ./
