--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --cov-report term-missing --durations=0 --cov musicbot tests
+addopts = --disable-warnings --cov-report term-missing --durations=0 --cov musicbot tests
