--- a/ui/package.json
+++ b/ui/package.json
@@ -3,37 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host 0.0.0.0",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "flatted": "^2.0.0",
-    "graphiql": "^0.13.0",
-    "graphql": "^14.1.1",
+    "axios": "^0.19.1",
+    "flatted": "^2.0.1",
     "graphql-tag": "^2.10.1",
-    "postgraphile": "^4.4.4",
+    "postgraphile": "^4.5.5",
     "postgraphile-plugin-connection-filter": "^1.1.3",
-    "splitpanes": "^1.13.0",
-    "vue": "^2.6.6",
-    "vue-axios": "^2.1.4",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.5.5",
-    "vuex": "^3.0.1",
-    "webpack": "^4.29.6"
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "splitpanes": "^2.2.1",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.2.3",
+    "vuex": "^3.1.2",
+    "webpack": "^4.41.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.1.2",
+    "fiber": "^1.0.4",
+    "graphiql": "^0.17.5",
+    "graphql": "^14.5.8",
+    "node-sass": "^4.13.0",
+    "sass": "^1.24.4",
+    "sass-loader": "^8.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3"
   }
 }
