--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,12 +40,14 @@ prompt_toolkit = "^3.0.2"
 spotify = "^0.8.2"
 
 [tool.poetry.dev-dependencies]
+dephell = "^0.8.0"
 pytest = "^5.2.4"
 pytest-cov = "^2.6"
 pytest-click = "^0.3.0"
 coverage-badge = "^1.0"
 pylint = "^2.3"
 pytest-docker-compose = "^3.1.2"
+fissix = {version = "^19.2b1", allow-prereleases = true}
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
