--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ coverage-badge = "^1.0"
 pylint = "^2.3"
 pytest-docker-compose = "^3.1.2"
 fissix = {version = "^19.2b1", allow-prereleases = true}
+html5lib = "^1.0.1"
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
