--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,6 @@ aiohttp==3.6.2 \
 appdirs==1.4.3 \
     --hash=sha256:d8b24664561d0d34ddfaec54636d502d7cea6e29c3eaf68f3df6180863e2166e \
     --hash=sha256:9e5896d1372858f8dd3344faf4e5014d21849c756c8d5701f78f8a103b372d92
-argh==0.26.2 \
-    --hash=sha256:a9b3aaa1904eeb78e32394cd46c6f37ac0fb4af6dc488daa58971bdc7d7fcaf3 \
-    --hash=sha256:e9535b8c84dc9571a48999094fda7f33e63c3f1b74f3e5f3ac0105a58405bb65
 astroid==2.3.3 \
     --hash=sha256:840947ebfa8b58f318d42301cf8c0a20fd794a33b61cc4638e28e9e61ba32f42 \
     --hash=sha256:71ea07f44df9568a75d0f354c49143a4575d90645e9fead6dfb52c26a85ed13a
@@ -445,6 +442,21 @@ pynacl==1.3.0 \
     --hash=sha256:53126cd91356342dcae7e209f840212a58dcf1177ad52c1d938d428eebc9fee5 \
     --hash=sha256:bf459128feb543cfca16a95f8da31e2e65e4c5257d2f3dfa8c0c1031139c9c92 \
     --hash=sha256:0c6100edd16fefd1557da078c7a31e7b7d7a52ce39fdca2bec29d4f7b6e7600c
+pyobjc-core==6.1; sys_platform == "darwin" \
+    --hash=sha256:1a0fbf012fb575e0adf8c18cfd4453e657cc2c0deb2660c529bf524ba4c9149a \
+    --hash=sha256:470ccd754efb468a59426942673dfc3c5c59f33a5b8cae8a7fc1be975c2d4128 \
+    --hash=sha256:751cdeb436cb181af2e2413015b072075590577c410c7f345080a38dd028b8ec \
+    --hash=sha256:8ccf44511cbe438fa6562c423c0c5f1dad7cfc0eadd6d8f112840f8845b44fda
+pyobjc-framework-cocoa==6.1; sys_platform == "darwin" \
+    --hash=sha256:c4077d2e6f96e4f3fd9780d66778cf51d27f414822498b24410e9df7a6a4d531 \
+    --hash=sha256:32ba4d0ce811e2088bf0fc360c9545c06586934e895f7133655b8f2182e7019a \
+    --hash=sha256:245e19156739f8068db474ad9561079cc698f08ef525e299b8eedc5531e02801 \
+    --hash=sha256:1dc428f867d35007ddf9de5b24eff5bfdf65c58b1d610abcb08bebd94c343312
+pyobjc-framework-fsevents==6.1; sys_platform == "darwin" \
+    --hash=sha256:7a635c86af744a1d17f0c6c3913bef87b5fd146e0311c03229eba9e512b81520 \
+    --hash=sha256:94c6953774b6d69e59d9781951f05ef57e352b3c530d4c236f463444852c3a88 \
+    --hash=sha256:3a403ce5997cc01f23f1a70f8b4c919311b9a6b1fdd3c3d02d19079d711f954c \
+    --hash=sha256:d2ae8748d1791dc9e3d19b41d3873283ac34ed17ff8fca70f1a199336a0477b5
 pyparsing==2.4.6 \
     --hash=sha256:c342dccb5250c08d45fd6f8b4a559613ca603b57498511740e65cd11a2e7dcec \
     --hash=sha256:4c830582a84fb022400b85429791bc551f1f4871c33f23e44f353119e92f969f
@@ -575,8 +587,8 @@ typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8" \
 urllib3==1.25.8 \
     --hash=sha256:2f3db8b19923a873b3e5256dc9c2dedfa883e33d87c690d9c7913e1f40673cdc \
     --hash=sha256:87716c2d2a7121198ebcb7ce7cccf6ce5e9ba539041cfbaeecfb641dc0bf6acc
-watchdog==0.9.0 \
-    --hash=sha256:965f658d0732de3188211932aeb0bb457587f04f63ab4c1e33eab878e9de961d
+watchdog==0.10.0 \
+    --hash=sha256:8e800496cdfb921cfdc62b58a11966d0d2203a35dc005b4b5b8e1ab3097b2eb5
 wcwidth==0.1.8 \
     --hash=sha256:8fd29383f539be45b20bd4df0dc29c20ba48654a41e661925e612311e9f3c603 \
     --hash=sha256:f28b3e8a6483e5d49e7f8949ac1a78314e740333ae305b4ba5defd3e74fb37a8
