use only spotipy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,32 +14,33 @@ python = "^3.7"
 isort = {version = "^4.3",extras = ["pyproject"]}
 click = "^7.0"
 click-didyoumean = "^0.0.3"
-click-man = "^0.3.0"
 click-spinner = "^0.1.8"
 attrdict = "^2.0"
 attrs = "^19.1"
 pytaglib = "^1.4"
-humanfriendly = "^4.18"
 tqdm = "^4.31"
 isodate = "^0.6.0"
-coloredlogs = "^10.0"
 logging-tree = "^1.8"
 pydub = "^0.23.1"
 psycopg2-binary = "^2.8"
 pyacoustid = "^1.1"
-pytube = "^9.4"
 python-vlc = "^3.0"
 graphql-py = "^0.7.1"
 click_aliases = "^1.0.1"
 feedparser = "^5.2.1"
-python-dotenv = "^0.10.3"
 flask = "^1.1.1"
 prettytable = "^0.7.2"
 prompt_toolkit = "^3.0.2"
-spotify = "^0.8.2"
 watchdog = "^0.10.0"
 mps-youtube = "^0.2.8"
 youtube-dl = "^2020.1.24"
+pytube3 = "^9.6.4"
+spotipy = "^2.10.0"
+click-man = "^0.4.1"
+humanfriendly = "^8.1"
+python-dotenv = "^0.12.0"
+spotify = "^0.10.0"
+coloredlogs = "^14.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.4"
