--- a/requirements.txt
+++ b/requirements.txt
@@ -3,20 +3,20 @@ async-timeout==3.0.1
 attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
+backoff==1.10.0
 certifi==2019.11.28
 chardet==3.0.4
-click==7.0
+click==7.1.1
 click-aliases==1.0.1
 click-didyoumean==0.0.3
-click-man==0.3.0
+click-man==0.4.1
 click-spinner==0.1.8
-colorama==0.4.3; sys_platform == "win32"
-coloredlogs==10.0
+coloredlogs==14.0
 feedparser==5.2.1
 flask==1.1.1
 graphql-py==0.7.1
-humanfriendly==4.18
-idna==2.8
+humanfriendly==8.1
+idna==2.9
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -24,28 +24,30 @@ jinja2==2.11.1
 logging-tree==1.8.1
 markupsafe==1.1.1
 mps-youtube==0.2.8
-multidict==4.7.4
+multidict==4.7.5
 pafy==0.5.5
 pathtools==0.1.2
 ply==3.11
 prettytable==0.7.2
-prompt-toolkit==3.0.3
+prompt-toolkit==3.0.5
 psycopg2-binary==2.8.4
 pyacoustid==1.1.7
 pydub==0.23.1
 pyreadline==2.1; sys_platform == "win32"
-pytaglib==1.4.5
-python-dotenv==0.10.5
+pytaglib==1.4.6
+python-dotenv==0.12.0
 python-vlc==3.0.7110
-pytube==9.5.3
-requests==2.22.0
+pytube3==9.6.4
+requests==2.23.0
 six==1.14.0
-spotify==0.8.4
+spotify==0.10.0
+spotipy==2.10.0
 toml==0.10.0
-tqdm==4.42.1
+tqdm==4.44.1
+typing-extensions==3.7.4.1
 urllib3==1.25.8
 watchdog==0.10.2
-wcwidth==0.1.8
+wcwidth==0.1.9
 werkzeug==1.0.0
 yarl==1.4.2
-youtube-dl==2020.2.16
+youtube-dl==2020.3.24
