--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,23 +5,24 @@ atomicwrites==1.3.0; sys_platform == "win32"
 attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
+backoff==1.10.0
 bcrypt==3.1.7
 cached-property==1.5.1
 cerberus==1.3.2
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
-click==7.0
+click==7.1.1
 click-aliases==1.0.1
 click-didyoumean==0.0.3
-click-man==0.3.0
+click-man==0.4.1
 click-spinner==0.1.8
 colorama==0.4.3; sys_platform == "win32"
-coloredlogs==10.0
-coverage==5.0.3
+coloredlogs==14.0
+coverage==5.0.4
 coverage-badge==1.0.1
 cryptography==2.8
-dephell==0.8.1
+dephell==0.8.2
 dephell-archive==0.1.6
 dephell-argparse==0.1.2
 dephell-changelogs==0.0.1
@@ -44,9 +45,9 @@ feedparser==5.2.1
 flask==1.1.1
 graphql-py==0.7.1
 html5lib==1.0.1
-humanfriendly==4.18
-idna==2.8
-importlib-metadata==1.5.0; python_version < "3.8"
+humanfriendly==8.1
+idna==2.9
+importlib-metadata==1.6.0; python_version < "3.8"
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -60,8 +61,8 @@ mccabe==0.6.1
 mistune==0.8.4
 more-itertools==8.2.0
 mps-youtube==0.2.8
-multidict==4.7.4
-packaging==20.1
+multidict==4.7.5
+packaging==20.3
 pafy==0.5.5
 paramiko==2.7.1
 pathtools==0.1.2
@@ -69,48 +70,50 @@ pexpect==4.8.0
 pluggy==0.13.1
 ply==3.11
 prettytable==0.7.2
-prompt-toolkit==3.0.3
+prompt-toolkit==3.0.5
 psycopg2-binary==2.8.4
 ptyprocess==0.6.0
 py==1.8.1
 pyacoustid==1.1.7
-pycparser==2.19
+pycparser==2.20
 pydub==0.23.1
 pylint==2.4.4
 pynacl==1.3.0
 pyparsing==2.4.6
 pypiwin32==223; sys_platform == "win32" and python_version >= "3.6"
 pyreadline==2.1; sys_platform == "win32"
-pyrsistent==0.15.7
-pytaglib==1.4.5
-pytest==5.3.5
+pyrsistent==0.16.0
+pytaglib==1.4.6
+pytest==5.4.1
 pytest-click==0.3
 pytest-cov==2.8.1
 pytest-docker-compose==3.1.2
-python-dotenv==0.10.5
+python-dotenv==0.12.0
 python-vlc==3.0.7110
-pytube==9.5.3
+pytube3==9.6.4
 pywin32==227; sys_platform == "win32" and python_version >= "3.6"
-pyyaml==5.3
-requests==2.22.0
+pyyaml==5.3.1
+requests==2.23.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0; platform_python_implementation == "CPython" and python_version < "3.9"
 shellingham==1.3.2
 six==1.14.0
-spotify==0.8.4
+spotify==0.10.0
+spotipy==2.10.0
 texttable==1.6.2
 toml==0.10.0
-tomlkit==0.5.8
-tqdm==4.42.1
+tomlkit==0.5.11
+tqdm==4.44.1
 typed-ast==1.4.1; implementation_name == "cpython" and python_version < "3.8"
+typing-extensions==3.7.4.1
 urllib3==1.25.8
 watchdog==0.10.2
-wcwidth==0.1.8
+wcwidth==0.1.9
 webencodings==0.5.1
 websocket-client==0.57.0
 werkzeug==1.0.0
 wrapt==1.11.2
 yarl==1.4.2
 yaspin==0.16.0
-youtube-dl==2020.2.16
-zipp==3.0.0; python_version < "3.8"
+youtube-dl==2020.3.24
+zipp==3.1.0; python_version < "3.8"
