--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,8 @@ spotipy = "^2.10.0"
 click-man = "^0.4.1"
 humanfriendly = "^8.1"
 python-dotenv = "^0.12.0"
-spotify = "^0.10.0"
 coloredlogs = "^14.0"
+python-slugify = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2.4"
