--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,6 @@ atomicwrites==1.3.0; sys_platform == "win32"
 attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
-backoff==1.10.0
 bcrypt==3.1.7
 cached-property==1.5.1
 cerberus==1.3.2
@@ -89,6 +88,7 @@ pytest-click==0.3
 pytest-cov==2.8.1
 pytest-docker-compose==3.1.2
 python-dotenv==0.12.0
+python-slugify==4.0.0
 python-vlc==3.0.7110
 pytube3==9.6.4
 pywin32==227; sys_platform == "win32" and python_version >= "3.6"
@@ -98,8 +98,8 @@ ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0; platform_python_implementation == "CPython" and python_version < "3.9"
 shellingham==1.3.2
 six==1.14.0
-spotify==0.10.0
 spotipy==2.10.0
+text-unidecode==1.3
 texttable==1.6.2
 toml==0.10.0
 tomlkit==0.5.11
