--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-aiohttp==3.6.2
-async-timeout==3.0.1
 attrdict==2.0.1
 attrs==19.3.0
 audioread==2.1.8
-backoff==1.10.0
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
@@ -24,7 +21,6 @@ jinja2==2.11.1
 logging-tree==1.8.1
 markupsafe==1.1.1
 mps-youtube==0.2.8
-multidict==4.7.5
 pafy==0.5.5
 pathtools==0.1.2
 ply==3.11
@@ -36,12 +32,13 @@ pydub==0.23.1
 pyreadline==2.1; sys_platform == "win32"
 pytaglib==1.4.6
 python-dotenv==0.12.0
+python-slugify==4.0.0
 python-vlc==3.0.7110
 pytube3==9.6.4
 requests==2.23.0
 six==1.14.0
-spotify==0.10.0
 spotipy==2.10.0
+text-unidecode==1.3
 toml==0.10.0
 tqdm==4.44.1
 typing-extensions==3.7.4.1
@@ -49,5 +46,4 @@ urllib3==1.25.8
 watchdog==0.10.2
 wcwidth==0.1.9
 werkzeug==1.0.0
-yarl==1.4.2
 youtube-dl==2020.3.24
