--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ pylint = "^2.3"
 pytest-docker-compose = "^3.1.2"
 html5lib = "^1.0.1"
 dephell = "^0.8.1"
+rstcheck = "^3.3.1"
 
 [tool.dephell.main]
 from = {format = "poetry", path = "pyproject.toml"}
