--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -94,6 +94,7 @@ pytube3==9.6.4
 pywin32==227; sys_platform == "win32" and python_version >= "3.6"
 pyyaml==5.3.1
 requests==2.23.0
+rstcheck==3.3.1
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0; platform_python_implementation == "CPython" and python_version < "3.9"
 shellingham==1.3.2
