--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 click-aliases==1.0.1
+click-completion==0.5.2
 click-didyoumean==0.0.3
 click-man==0.4.1
 click-spinner==0.1.8
@@ -36,6 +37,7 @@ python-slugify==4.0.0
 python-vlc==3.0.7110
 pytube3==9.6.4
 requests==2.23.0
+shellingham==1.3.2
 six==1.14.0
 spotipy==2.10.0
 text-unidecode==1.3
