--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
     restart: always
     ports:
       - 5432:5432
-    #volumes:
-    #  - ./postgres-data:/var/lib/postgresql/data
+    volumes:
+      - /home/postgres-data:/var/lib/postgresql/data
   #adminer:
   #  image: adminer
   #  restart: unless-stopped
